Update loading screen v1.2 fixed misalignment and container switching issues

--- a/frontend/css/loader.css
+++ b/frontend/css/loader.css
@@ -16,7 +16,7 @@
 }
 
 .lds-ripple {
-  display: inline-block;
+  float:center;
   position: relative;
   margin: auto;
   width: 64px;
